<resources>
    <string name="app_name">Stargram</string>
    <string name="stargram_username_login_text">username</string>
    <string name="stargram_password_login_text">password</string>
    <string name="login_btn_text">Login</string>
    <string name="signup_btn_txt">Signup</string>
    <string name="photo_comment_text">Photo comment</string>
    <string name="photo_comment_hint_text">Photo comment here</string>
    <string name="upload_image_cd">Image that will be uploaded</string>
    <string name="save_btn_text">Save</string>
    <string name="take_picture_text">Take picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>